알림 배치 수정 삭제 리팩토링